[package]
edition = "2021"
name = "boop_cipher"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.7.0", default-features = false, features = ["napi4"] }
napi-derive = "2.7.0"
chacha20poly1305 = "0.10.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
